# metallic

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  imgui.ini  readme.md  roadmap.md  streaming_roadmap.md
.codex/environments/: environment.toml
Issue/: log.txt
Pipelines/: cluster_vis.json  forward.json  meshlet_debug.json  visibility_buffer.json  visibilitybuffer.json  vulkan_preview.json
Shaders/: Readme.md  bunny.slang  deferred_lighting.slang  meshlet.slang  raytraced_shadow.metal  visibility.slang
Shaders/Atmosphere/: sky.slang
Shaders/Mesh/: cluster_render.slang  meshlet.slang
Shaders/Post/: auto_exposure.slang  passthrough.slang  taa.slang  tonemap.slang
Shaders/Raytracing/: raytraced_shadow.metal  raytraced_shadow.slang
Shaders/Shared/: bindless_scene.slang  cluster_scene.slang  gpu_driven_helpers.slang  hzb_cull.slang
Shaders/Streaming/: stream_agefilter_groups.slang  stream_update_scene.slang
Shaders/Vertex/: triangle.slang
Shaders/Visibility/: build_indirect.slang  cluster_cull.slang  dag_cluster_cull.slang  deferred_lighting.slang  hzb_build.slang  hzb_cull_helpers.slang  hzb_spd.slang  instance_classify.slang  instance_cull.slang  meshlet_cull.slang  meshlet_visualize.slang  visibility.slang  visibility_indirect.slang
Source/: CMakeLists.txt  camera.h  frame_graph.cpp  frame_graph.h  glfw_metal_bridge.h  glfw_metal_bridge.mm  imgui_metal_bridge.h  imgui_metal_bridge.mm  input.cpp  main.cpp  main_vulkan.cpp  material_loader.cpp  material_loader.h  mesh_loader.cpp  mesh_loader.h  meshlet_builder.cpp  meshlet_builder.h  raytraced_shadows.cpp  raytraced_shadows.h  scene_graph.cpp  scene_graph.h  scene_graph_ui.cpp  scene_graph_ui.h  tracy_metal.h
Source/Asset/: cluster_lod_builder.cpp  cluster_lod_builder.h  material_loader.cpp  material_loader.h  mesh_loader.cpp  mesh_loader.h  meshlet_builder.cpp  meshlet_builder.h
Source/Helpers/: shader_manager.cpp  shader_manager.h  slang_compiler.cpp  slang_compiler.h  streamline_context.h
Source/PipelineEditor/: CMakeLists.txt  pass_registry.cpp  pass_registry.h  pipeline_asset.cpp  pipeline_asset.h  pipeline_builder.cpp  pipeline_builder.h
Source/Platform/: imgui_metal_bridge.h  imgui_metal_bridge.mm  metal_raytracing_utils.cpp  metal_raytracing_utils.h  metal_resource_utils.cpp  metal_resource_utils.h  metal_runtime.h  metal_runtime.mm  metal_shader_utils.cpp  metal_shader_utils.h  tracy_metal.h  tracy_metal.mm
Source/RHI/: bindless_scene_constants.h  rhi_backend.cpp  rhi_backend.h  rhi_core.h  rhi_interop.h  rhi_raytracing_utils.cpp  rhi_resource_utils.cpp  rhi_resource_utils.h  rhi_shader_utils.cpp  rhi_shader_utils.h  rhi_window_runtime.h
Source/RHI/Helpers/: rhi_helpers.h  rhi_raytracing_utils.h  rhi_resource_utils.cpp  rhi_resource_utils.h  rhi_shader_utils.cpp  rhi_shader_utils.h
Source/RHI/Metal/: metal_frame_graph.cpp  metal_frame_graph.h  metal_window_runtime.cpp
Source/RHI/Vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_descriptor_buffer.cpp  vulkan_descriptor_buffer.h  vulkan_descriptor_manager.cpp  vulkan_descriptor_manager.h  vulkan_frame_graph.cpp  vulkan_frame_graph.h  vulkan_image_tracker.h  vulkan_pipeline_cache.cpp  vulkan_pipeline_cache.h  vulkan_resource_handles.h  vulkan_resource_state_tracker.h  vulkan_rt_pipeline.cpp  vulkan_rt_pipeline.h  vulkan_transient_allocator.cpp  vulkan_transient_allocator.h  vulkan_upload_service.cpp  vulkan_upload_service.h  vulkan_window_runtime.cpp
Source/RHI/Vulkan/Helpers/: aftermath_gpu_crash_tracker.cpp  aftermath_gpu_crash_tracker.h  aftermath_helpers.h  aftermath_tracker.cpp  aftermath_tracker.h  vulkan_diagnostics.cpp  vulkan_diagnostics.h  vulkan_helpers.h  vulkan_transient_allocator.cpp  vulkan_transient_allocator.h  vulkan_upload_service.cpp  vulkan_upload_service.h
Source/Rendering/: camera.h  cluster_occlusion_state.h  cluster_streaming_service.h  cluster_types.h  dag_cpu_mirror.cpp  dag_cpu_mirror.h  frame_context.h  frame_graph.cpp  frame_graph.h  gpu_cull_resources.h  gpu_driven_constants.h  gpu_driven_helpers.h  gpu_scene.cpp  gpu_scene.h  hzb_constants.h  hzb_spd_constants.h  input.cpp  input.h  nsight_markers.h  pass_registrations.cpp  pass_registrations_vulkan.cpp  pass_registry.cpp  pass_registry.h  pipeline_asset.cpp  pipeline_asset.h  pipeline_builder.cpp  pipeline_builder.h  pipeline_editor.cpp  pipeline_editor.h  raytraced_shadows.cpp  raytraced_shadows.h  render_pass.cpp  render_pass.h  render_uniforms.h  scene_context.cpp  scene_context.h  scene_gpu.cpp  scene_gpu.h  shader_manager.cpp  shader_manager.h  (+6 more)
Source/Rendering/Helpers/: nsight_markers.h  slang_compiler.cpp  slang_compiler.h
Source/Rendering/Passes/: auto_exposure_pass.h  blit_pass.h  cluster_cull_pass.h  cluster_hiz_build_pass.h  cluster_render_pass.h  cluster_streaming_age_filter_pass.h  cluster_streaming_update_pass.h  dag_cluster_cull_pass.h  deferred_lighting_pass.h  forward_pass.h  hzb_build_pass.h  imgui_overlay_pass.h  instance_cull_pass.h  meshlet_cull_pass.h  meshlet_visualize_pass.h  output_pass.h  shadow_ray_pass.h  sky_pass.h  streamline_dlss_pass.cpp  streamline_dlss_pass.h  taa_pass.h  tonemap_pass.h  visibility_pass.h
Source/Scene/: scene.cpp  scene.h  scene_graph.cpp  scene_graph.h  scene_graph_ui.cpp
Tools/: CMakeLists.txt
Tools/PipelineEditor/: CMakeLists.txt  main.cpp  pass_registrations_editor.cpp  pipeline_editor.cpp  pipeline_editor.h
build_probe/: triangle.spv
cmake/: DownloadSlang.cmake  FindNsightAftermath.cmake  SetupAftermath.cmake  SetupNsight.cmake  SetupSlang.cmake  SetupStreamline.cmake
